--- a/src/assets/css/colors.scss
+++ b/src/assets/css/colors.scss
@@ -16,5 +16,6 @@ $color-title-dark: $color-white;
 $color-text-dark: $color-white;
 
 :export {
-  color-main-bg-light: $color-main-bg-light;
+  main-bg-light: $color-main-bg-light;
+  accent-light: $color-accent-light;
 }
