--- a/src/assets/css/colors.scss
+++ b/src/assets/css/colors.scss
@@ -7,6 +7,7 @@ $color-content-bg-light: #fefefe;
 $color-accent-light: #697c9a;
 $color-title-light: #2b3442;
 $color-text-light: #4b6a9b;
+$color-text-hover-light: #222731;
 
 // DARK MODE
 $color-main-bg-dark: #141d2f;
@@ -14,8 +15,22 @@ $color-content-bg-dark: #1e2a47;
 $color-accent-dark: $color-white;
 $color-title-dark: $color-white;
 $color-text-dark: $color-white;
+$color-text-hover-dark: #90a4d4;
 
 :export {
+  // LIGHT MODE
   main-bg-light: $color-main-bg-light;
+  content-bg-light: $color-content-bg-light;
   accent-light: $color-accent-light;
+  title-light: $color-title-light;
+  text-light: $color-text-light;
+  text-hover-light: $color-text-hover-light;
+
+  // DARK MODE
+  main-bg-dark: $color-main-bg-dark;
+  content-bg-dark: $color-content-bg-dark;
+  accent-dark: $color-accent-dark;
+  title-dark: $color-title-dark;
+  text-dark: $color-text-dark;
+  text-hover-dark: $color-text-hover-dark;
 }
