Styling for half of user profile section

--- a/src/assets/css/colors.scss
+++ b/src/assets/css/colors.scss
@@ -2,6 +2,7 @@
   --color-blue: #0079ff;
   --color-blue-light: #60abff;
   --color-white: #ffffff;
+  --color-red: #f74646;
 
   // LIGHT MODE
   --color-main-background: #f6f8ff;
