--- a/src/assets/scss/mixins.scss
+++ b/src/assets/scss/mixins.scss
@@ -1,5 +1,6 @@
 $tablet: 48em; // 768px
-$desktop: 75em; // 1200px
+$laptop: 75em; // 1200px
+$desktop: 89em; // 1440px
 
 @mixin media-xs {
   @media (max-width: 22em) {
@@ -20,13 +21,19 @@ $desktop: 75em; // 1200px
 }
 
 @mixin media-md {
-  @media (max-width: #{$desktop}) and (orientation: portrait) {
+  @media (max-width: #{$laptop}) and (orientation: portrait) {
     @content;
   }
 }
 
 @mixin media-md-land {
-  @media (max-width: #{$desktop}) and (orientation: landscape) {
+  @media (max-width: #{$laptop}) and (orientation: landscape) {
+    @content;
+  }
+}
+
+@mixin media-lg {
+  @media (max-width: #{$desktop}) {
     @content;
   }
 }
